kolt fmt suppresses ktfmt sun.misc.Unsafe warning on JDK 23+ (#358)
ktfmt 0.54 (and 0.62, the current latest) ships a bundled intellij-util
fork whose ConcurrentLongObjectHashMap calls sun.misc.Unsafe::objectFieldOffset.
JEP 498 (JDK 23) starts emitting a 4-line deprecation warning per process,
so every kolt fmt / fmt --check invocation now spams that block on a
modern JDK. Bumping ktfmt does not fix it — the underlying intellij-util
fork still uses Unsafe.

Pass --sun-misc-unsafe-memory-access=allow to the ktfmt JVM, which fully
silences the warning. The flag is itself unrecognised on JDK <23, so
gate on the resolved JDK major version (config.build.jdk ?:
BOOTSTRAP_JDK_VERSION). Projects pinned to JDK <23 see no behavior
change.

Note: ktfmt currently runs under the project JDK, not the bootstrap.
That is arguably wrong (ktfmt is a tool, not project code) but
broadening the fix to always run ktfmt under bootstrap is an ADR-level
design call best handled separately. Filed for follow-up.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>